ubuntu-release-upgrader (1:15.10.13.1) UNRELEASED; urgency=medium

  * data/DistUpgrade.cfg: Update kernel version and types that will be
    considered for removal. (LP: #1508539)

 -- Brian Murray <brian@ubuntu.com>  Wed, 21 Oct 2015 09:17:13 -0700

ubuntu-release-upgrader (1:15.10.13) wily; urgency=medium

  * Revert change from 15.10.11, already rejected from wily-proposed

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 20 Oct 2015 16:56:06 +0100

ubuntu-release-upgrader (1:15.10.12) wily; urgency=medium

  * Remove kmix as part of Kubuntu upgrade, now plasma-pa is volume applet

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 20 Oct 2015 16:34:56 +0100

ubuntu-release-upgrader (1:15.10.11) wily; urgency=medium

  * Change KDE fetcher UI from showing the HTML release notes to showing the
    text notes. HTML notes apparently come back with 403 when fetched through
    urllib...
    Since we have no tested WebView code at hand to prefer over the text notes
    we'll have to settle for text even though we could render HTML just fine.
    This fixes the fetcher constantly coming up with a fatal error dialog due
    to handling the 403 exception.
    LP: #1507887

 -- Harald Sitter <sitter@kde.org>  Tue, 20 Oct 2015 07:45:13 +0200

ubuntu-release-upgrader (1:15.10.10) wily; urgency=medium

  * Log the installed meta packages to make troubleshooting upgrades easier.
    (LP: #1505359)

 -- Brian Murray <brian@ubuntu.com>  Mon, 12 Oct 2015 12:31:30 -0700

ubuntu-release-upgrader (1:15.10.9) wily; urgency=medium

  * po/update-manager.pot:
    - updated (LP: #1502529)

 -- Brian Murray <brian@ubuntu.com>  Wed, 07 Oct 2015 16:32:00 -0700

ubuntu-release-upgrader (1:15.10.8) wily; urgency=medium

  * data/removal_blacklist.cfg: make ubuntu-release-upgrader blacklist entry
    more specific so it does not match ubuntu-release-upgrader-qt.
    (LP: #1313514)

 -- Brian Murray <brian@ubuntu.com>  Mon, 05 Oct 2015 17:06:06 -0700
